# pythonProject1

./: README.md  cli_text.py  example.txt  invalid.json  models.py  pyproject.toml  serialize.py  students.json
data/: report.csv
data/samples/: data.json
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  05_initials_and_len.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: text1.py  text_stats.py
src/lab04/: io_txt_csv.py  text_analysis_simple.py  text_report.py  text_report_standalone.py
src/lab04/data/: input.txt
src/lab05/: csv to xlsx.py  csv_xlsx.py  json to csv.py  json_csv.py  people.json.py
src/lab05/data/: work with csv.py
src/lab05/data/data/: primers.py  test converter.py
src/lab05/data/data/data/samples/: cities.csv  invalid.json  people.json
src/lab05/data/samples/: people.csv  people.json
src/lab06/: cli_convert.py  cli_text.py  test_data.py
src/lab06/test_data/samples/: people.csv  people.txt
src/lab08/: README.md  creating data.py  incomplete.json  invalid_data.json  models.py  serialize.py
src/lab08/data/lab08/: students_error.json  students_input.json
src/lab09/: group.py  stats.py
src/lab10/: 10 README.md  linked_list.py  structures.py  tested_linked list.py
src/lib/: text.py
tests/: output.json  test_json_csv.py  tests_text.py
